tests/should_fail/no_final.sm
initial bar

foo --
  winc "foo"
--> pre
